# androix-lib-libXfont

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  xfont.pc.in
doc/: .gitignore
include/X11/fonts/: .cvsignore  bdfint.h  bitmap.h  bufio.h  fntfil.h  fntfilio.h  fntfilst.h  fontconf.h.in  fontmisc.h  fontmod.h  fontutil.h  fontxlfd.h  pcf.h
src/: .cvsignore  Makefile.am
src/FreeType/: Makefile.am  ft.h  ftenc.c  ftfuncs.c  ftfuncs.h  fttools.c  xttcap.c  xttcap.h
src/Speedo/: Makefile.am  bics-iso.h  do_char.c  do_trns.c  out_bl2d.c  out_blk.c  out_outl.c  out_scrn.c  out_util.c  reset.c  set_spcs.c  set_trns.c  spdo_prv.h  speedo.h  spencode.c  sperr.c  spfile.c  spfont.c  spfuncs.c  spglyph.c  spinfo.c  spint.h
src/Type1/: Makefile.am  afm.c  arith.c  arith.h  blues.h  cidchar.c  curves.c  curves.h  fontfcn.c  fontfcn.h  hints.c  hints.h  lines.c  lines.h  objects.c  objects.h  paths.c  paths.h  pictures.h  regions.c  regions.h  scanfont.c  spaces.c  spaces.h  t1funcs.c  t1imager.h  t1info.c  t1intf.h  t1io.c  t1malloc.c  t1snap.c  t1stdio.h  t1stub.c  token.c  token.h  tokst.h  trig.h  type1.c  util.c  util.h
src/bitmap/: Makefile.am  bdfread.c  bdfutils.c  bitmap.c  bitmapfunc.c  bitmaputil.c  bitscale.c  fontink.c  pcfread.c  pcfwrite.c  snfread.c  snfstr.h
src/builtins/: Makefile.am  builtin.h  dir.c  file.c  fonts.c  fpe.c  render.c
src/fc/: Makefile.am  fsconvert.c  fserve.c  fserve.h  fservestr.h  fsio.c  fsio.h  fslibos.h  fstrans.c
src/fontcache/: Makefile.am  fontcache.c  fontcache.h
src/fontenc/: Makefile.am
src/fontfile/: Makefile.am  bitsource.c  bufio.c  catalogue.c  decompress.c  defaults.c  dirfile.c  ffcheck.c  fileio.c  filewr.c  fontdir.c  fontencc.c  fontfile.c  fontscale.c  gunzip.c  printerfont.c  register.c  renderers.c
src/stubs/: Makefile.am  errorf.c  fatalerror.c  fontmod.c  initfshdl.c  regfpefunc.c  rmfshdl.c  stubs.h
src/util/: Makefile.am  atom.c  fontaccel.c  fontnames.c  fontutil.c  fontxlfd.c  format.c  miscutil.c  patcache.c  private.c  utilbitmap.c
